--- a/package.json
+++ b/package.json
@@ -2,22 +2,49 @@
   "name": "affworld-assignment-2025",
   "version": "0.1.0",
   "private": true,
+  "description": "Affworld Assignment 2025 is an assignment for the opening of a Software Engineer position. It is a Next.js 15 application with SSR, ISR, and other Next.js features, using the ShadCN UI library and MongoDB Atlas as the database.",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "node ./src/scripts/dev.cjs && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.473.0",
+    "mongoose": "^8.9.5",
+    "next": "15.1.5",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
-  }
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.4.1"
+  },
+  "peerDependencies": {
+    "next": "15.1.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not < 0.5%"
+  ]
 }
