--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
     "mongoose": "^8.9.5",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -31,6 +33,7 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "15.1.5",
     "postcss": "^8.0.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1"
   },
   "peerDependencies": {
