--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-DATABASE_URL
+MONGO_URI=your_mongodb_connection_string
+JWT_SECRET=your_secret_for_jwt
+FRONTEND_URL=http://localhost:3000
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+EMAIL=your_email@example.com
+EMAIL_PASSWORD=your_email_password
+UPLOADTHING_TOKEN='Uploadthing sdk v7 token'
