--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 EMAIL=your_email@example.com
 EMAIL_PASSWORD=your_email_password
 UPLOADTHING_TOKEN='Uploadthing sdk v7 token'
+NODE_ENV=development
